@@ -48,6 +48,7 @@ v1.99:
   - added class ParserException, removed SubExcepion<SyntaxErr,MathExpression> and SubException<DefinitionError,MathExpression>
 
 v2.0:
+- class MemBlock removed: unnecessary for MemPointer uses MemPointer instead
 - Buffer<T>:
   - changed methodnames:
     blocks() -> getBlocks()
@@ -55,3 +56,5 @@ v2.0:
   - returntype of merge() changed from MemPointer<T> to T * .
   - added function get()
   - merge() will clear the buffer so it will go to initial state
+- MemPointer<T>:
+  new Constructor which will allocate a memory-area
